Fix/2919 [calendar] align styles with figma

--- a/packages/components/calendar/src/select-day.scss
+++ b/packages/components/calendar/src/select-day.scss
@@ -8,7 +8,6 @@
   display: inline-flex;
   flex-direction: column;
   max-inline-size: fit-content;
-  padding: var(--_focus-offset);
 }
 
 :host([show-week-numbers]) {
